Opacity Slider + highlighting bugfix
Added an opacity slider with checkboxes to freeze the inner and outer rendering to the current slider value. Also fixed all cases of interaction with nodes highlighting the dropdown slider.

--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,9 @@
             pointer-events: none;
             z-index: 5;
         }
-
+.no-select {
+    user-select: none;
+}
         .title-input {
             color: #bbb;
             background: none !important;
