--- a/styles.css
+++ b/styles.css
@@ -174,7 +174,7 @@
         }
 
         * {
-            font-family: "Open Sans", sans-serif;
+            font-family: "Inter", sans-serif;
             color: #bbb;
         }
 
