--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-        html {
+﻿        html {
             /* overflow:hidden; */
         }
 
@@ -541,6 +541,7 @@
             border: inset;
             border-color: #8882;
             resize: vertical;
+            font-size: 15px;
             /* only allows the height to be resizable */
         }
 
@@ -565,18 +566,21 @@
             width: auto;
         }
 
-        table {
-            border-collapse: collapse;
-            width: 400px;
-            background-color: #222226;
-        }
+table {
+    border-collapse: collapse;
+    width: 400px;
+}
 
-        th,
-        td {
-            padding: 15px;
-            text-align: center;
-            border: 1px solid #ddd;
-        }
+th, td {
+    padding: 15px;
+    text-align: center;
+    border: 1px solid #ddd;
+}
+
+/* Apply background color to cells in the right column */
+td:nth-child(1) {
+    background-color: #222226;
+}
 
         .custom-scrollbar::-webkit-scrollbar {
             width: 10px;
@@ -736,3 +740,103 @@
             display: flex;
             justify-content: space-between;
         }
+/* Hide the default checkbox */
+input[type="checkbox"] {
+    display: none;
+}
+
+    /* Create a custom checkbox */
+    input[type="checkbox"] + label:before {
+        content: '';
+        position: absolute;
+        left: 0;
+        top: 3px; 
+        width: 14px; 
+        height: 14px; 
+        border: 1px solid rgb(60, 59, 66);
+        background-color: #222226;
+        display: inline-block;
+        border-radius: 25%; 
+        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1), 
+        0 1px 2px rgba(0, 0, 0, 0.06); 
+    }
+
+    
+    input[type="checkbox"]:checked + label:before {
+        background-color: #006BB6; 
+    }
+
+    
+    input[type="checkbox"] + label {
+        padding-left: 25px; 
+    }
+
+    input[type="checkbox"] + label {
+        position: relative;
+        top: -3px;
+    }
+    input[type="checkbox"]:checked + label:after {
+        content: '✔';
+        position: absolute;
+        top: 1px; 
+        left: 2px; 
+        font-size: 15px; 
+        color: #bbb;
+    }
+label {
+    user-select: none;
+    padding-top: 2px;
+}
+
+/* The slider itself */
+input[type=range] {
+    -webkit-appearance: none; 
+    appearance: none;
+    width: 100%; 
+    height: 6px; 
+    background: #222226; 
+    outline: none; 
+    opacity: 0.7; 
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+    margin: 12px 0; 
+    background: linear-gradient(to right, #006BB6 0%, #006BB6 50%, #222226 50%, #222226 100%);
+}
+
+    /* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
+    input[type=range]::-webkit-slider-thumb {
+        -webkit-appearance: none; 
+        appearance: none;
+        width: 10px;
+        height: 20px; 
+        background: #bbb; 
+        cursor: pointer; 
+        border-radius: 4px; 
+        margin-top: -1px; 
+    }
+
+        input[type=range]::-webkit-slider-thumb:hover {
+            background: #aaa; 
+        }
+
+    input[type=range]::-moz-range-thumb {
+        width: 10px;
+        height: 20px; 
+        background: #bbb; 
+        cursor: pointer; 
+        border-radius: 4px; 
+    }
+
+    /* The slider progress (for Firefox) */
+    input[type=range]::-moz-range-progress {
+        background: #006BB6;
+    }
+
+    /* The slider track (for Firefox) */
+    input[type=range]::-moz-range-track {
+        background: #222226;
+    }
+
+    input[type=range]::-moz-range-thumb:hover {
+        background: #aaa; 
+    }
