--- a/styles.css
+++ b/styles.css
@@ -442,22 +442,25 @@
                 }
 
         #api-key-input {
-            margin-bottom: 10px;
             background-color: #222226;
             color: #bbb;
             border: inset;
             border-color: #8882;
         }
 
-        .linkbuttons {
-            padding: 4px 6px;
-            font-size: 14px;
-            cursor: pointer;
-            background-color: #222226;
-            transition: background-color 0.3s;
-            border: inset;
-            border-color: #8882;
-        }
+.api-container {
+
+}
+
+.linkbuttons {
+    padding: 4px 6px;
+    font-size: 14px;
+    cursor: pointer;
+    background-color: #222226;
+    transition: background-color 0.3s;
+    border: inset;
+    border-color: #8882;
+}
 
             .linkbuttons:hover {
                 background-color: #ddd;
@@ -477,9 +480,8 @@
             flex-direction: row;
             flex-wrap: wrap;
             justify-content: space-between;
-            width: 300px;
-            margin-top: 5px;
-            margin-bottom: -6px;
+            width: 270px;
+            padding-top: 6px;
             /* adjust this as needed */
         }
 
@@ -498,21 +500,26 @@
             display: none;
         }
 
-        .tablink {
-            padding: 4px 6px;
-            font-size: 14px;
-            cursor: pointer;
-            background-color: #222226;
-            transition: background-color 0.3s;
-            border: inset;
-            border-color: #8882;
-        }
+.tablink {
+    padding: 4px 6px;
+    font-size: 14px;
+    cursor: pointer;
+    background-color: #222226;
+    transition: background-color 0.3s;
+    border: inset;
+    border-color: #8882;
+}
 
-            .tablink:hover {
-                background-color: #ddd;
-                color: #222226;
-                /* Change text color on hover so it's visible against the lighter background */
-            }
+    .tablink:hover {
+        background-color: #ddd;
+        color: #222226;
+        /* Change text color on hover so it's visible against the lighter background */
+    }
+
+    .tablink.activeTab {
+        background-color: #929292; /* Or the color you want for active tab */
+        color: #222226; /* Or the color you want for the text of active tab */
+    }
 
         .input-group {
             display: flex;
@@ -520,18 +527,18 @@
         }
 
         .btn-group button {
-            width: 30px;
+            width: 39px;
             /* Adjust as needed */
-            height: 30px;
+            height: 33px;
             /* Adjust as needed */
         }
 
         .btn-group {
             display: flex;
-            flex-direction: column;
             align-items: start;
             gap: 5px;
-            padding-left: 6px;
+            padding-left: 33px;
+            padding-bottom: 10px;
             width: 30px;
             height: 20px;
         }
@@ -543,7 +550,6 @@
             border: inset;
             border-color: #8882;
             resize: vertical;
-            font-size: 15px;
             /* only allows the height to be resizable */
         }
 
@@ -568,21 +574,18 @@
             width: auto;
         }
 
-table {
-    border-collapse: collapse;
-    width: 400px;
-}
+        table {
+            border-collapse: collapse;
+            width: 283px;
+            background-color: #222226;
+        }
 
-th, td {
-    padding: 15px;
-    text-align: center;
-    border: 1px solid #ddd;
-}
-
-/* Apply background color to cells in the right column */
-td:nth-child(1) {
-    background-color: #222226;
-}
+        th,
+        td {
+            padding: 15px;
+            text-align: center;
+            border: 1px solid #ddd;
+        }
 
         .custom-scrollbar::-webkit-scrollbar {
             width: 10px;
@@ -628,7 +631,6 @@ td:nth-child(1) {
             background-color: #222226;
             border: inset;
             border-color: #8882;
-            width: 160px;
         }
 
         .model-input {
@@ -697,18 +699,17 @@ td:nth-child(1) {
                 border: none;
             }
 
-        }
 
         .extract-button {
-            /* your styles here */
+            
         }
 
         .scrollable-list {
             height: 100px; /* Adjust this value based on how tall you want your list to be */
-            width: 261px;
+            width: 250px;
             overflow-y: auto;
             border: 1px solid #000;
-            padding: 10px;
+            padding: 5px;
         }
 
             .scrollable-list::-webkit-scrollbar {
@@ -743,49 +744,68 @@ td:nth-child(1) {
             display: flex;
             justify-content: space-between;
         }
-/* Hide the default checkbox */
+.inline-container {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+#LocalLLMselect {
+    background-color: #222226;
+    border: none;
+}
+
+#saved-networks-container div {
+    margin: 5px 0;
+}
+
+#saved-networks-container button {
+    margin-right: 10px;
+}
+
+
 input[type="checkbox"] {
     display: none;
 }
 
-    /* Create a custom checkbox */
-    input[type="checkbox"] + label:before {
-        content: '';
-        position: absolute;
-        left: 0;
-        top: 3px; 
-        width: 14px; 
-        height: 14px; 
-        border: 1px solid rgb(60, 59, 66);
-        background-color: #222226;
-        display: inline-block;
-        border-radius: 25%; 
-        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1), 
-        0 1px 2px rgba(0, 0, 0, 0.06); 
-    }
+/* Create a custom checkbox */
+input[type="checkbox"] + label:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 3px;
+    width: 14px;
+    height: 14px;
+    border: 1px solid rgb(60, 59, 66);
+    background-color: #222226;
+    display: inline-block;
+    border-radius: 25%;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.06);
+}
 
-    
-    input[type="checkbox"]:checked + label:before {
-        background-color: #006BB6; 
-    }
 
-    
-    input[type="checkbox"] + label {
-        padding-left: 25px; 
-    }
+input[type="checkbox"]:checked + label:before {
+    background-color: #006BB6;
+}
 
-    input[type="checkbox"] + label {
-        position: relative;
-        top: -3px;
-    }
-    input[type="checkbox"]:checked + label:after {
-        content: '✔';
-        position: absolute;
-        top: 1px; 
-        left: 2px; 
-        font-size: 15px; 
-        color: #bbb;
-    }
+
+input[type="checkbox"] + label {
+    padding-left: 25px;
+}
+
+input[type="checkbox"] + label {
+    position: relative;
+    top: -3px;
+}
+
+input[type="checkbox"]:checked + label:after {
+    content: '✔';
+    position: absolute;
+    top: 1px;
+    left: 2px;
+    font-size: 15px;
+    color: #bbb;
+}
+
 label {
     user-select: none;
     padding-top: 2px;
@@ -793,41 +813,41 @@ label {
 
 /* The slider itself */
 input[type=range] {
-    -webkit-appearance: none; 
+    -webkit-appearance: none;
     appearance: none;
-    width: 100%; 
-    height: 6px; 
-    background: #222226; 
-    outline: none; 
-    opacity: 0.7; 
+    width: 100%;
+    height: 6px;
+    background: #222226;
+    outline: none;
+    opacity: 0.7;
     -webkit-transition: .2s;
     transition: opacity .2s;
-    margin: 12px 0; 
+    margin: 12px 0;
     background: linear-gradient(to right, #006BB6 0%, #006BB6 50%, #222226 50%, #222226 100%);
 }
 
     /* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
     input[type=range]::-webkit-slider-thumb {
-        -webkit-appearance: none; 
+        -webkit-appearance: none;
         appearance: none;
         width: 10px;
-        height: 20px; 
-        background: #bbb; 
-        cursor: pointer; 
-        border-radius: 4px; 
-        margin-top: -1px; 
+        height: 20px;
+        background: #bbb;
+        cursor: pointer;
+        border-radius: 4px;
+        margin-top: -1px;
     }
 
         input[type=range]::-webkit-slider-thumb:hover {
-            background: #aaa; 
+            background: #aaa;
         }
 
     input[type=range]::-moz-range-thumb {
         width: 10px;
-        height: 20px; 
-        background: #bbb; 
-        cursor: pointer; 
-        border-radius: 4px; 
+        height: 20px;
+        background: #bbb;
+        cursor: pointer;
+        border-radius: 4px;
     }
 
     /* The slider progress (for Firefox) */
@@ -841,8 +861,9 @@ input[type=range] {
     }
 
     input[type=range]::-moz-range-thumb:hover {
-        background: #aaa; 
+        background: #aaa;
     }
+
 .api-container {
     display: flex;
 }
@@ -856,7 +877,7 @@ input[type=range] {
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    margin-left: -80px; 
+    margin-left: -80px;
 }
 
 .key-button {
@@ -876,9 +897,11 @@ input[type=range] {
     .CodeMirror-simplescroll-scrollbar:hover {
         background: #555 !important;
     }
+
 .CodeMirror-cursor {
     border-left: 2px solid #bbb !important;
 }
+
 .CodeMirror-selected {
     background: Highlight !important;
 }
