refactor + ai cursor
minor fixes, refactor wolfram to searchapi, add aicursor.js file

--- a/styles_v1.css
+++ b/styles_v1.css
@@ -1129,7 +1129,7 @@ input[type=range] {
 }
 
 .user-prompt {
-    background-color: #9578ab;
+    background-color: #b799ce;
     color: #222226;
     padding: 4px 10px 4px 12px;
     border-radius: 10px;
