--- a/styles_v1.css
+++ b/styles_v1.css
@@ -1083,30 +1083,26 @@ input[type=range] {
     justify-content: left;
 }
 
+.code-block-container {
+    width: 88%; /* Add width to the parent container */
+    margin: auto;
+}
+
 .code-block-wrapper {
-    display: flex; 
-    flex-direction: column; 
-    align-items: flex-start; 
-    justify-content: flex-start; 
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: flex-start;
+    justify-content: flex-start;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
     padding: 0px;
-    overflow: hidden;
-    width: 88%;
-    margin: auto;
+    overflow-x: auto;
+    overflow-y: hidden;
+    width: 100%; /* Match the width with the label */
     background-color: #18181c;
     -webkit-box-shadow: 0px 0px 6.5px rgba(0, 0, 0, 0.5);
     -moz-box-shadow: 0px 0px 6.5px rgba(0, 0, 0, 0.5);
     box-shadow: 0px 0px 6.5px rgba(0, 0, 0, 0.5);
-}
-
-.code-block {
-    padding: 15px;
-    margin-bottom: 0px;
-    box-sizing: border-box;
-    color: #D4D4D4;
-    overflow-x: auto; /* Add horizontal scrollbar when content overflows */
-    white-space: pre; /* Prevents the text from wrapping */
 }
 
 .language-label {
@@ -1114,13 +1110,23 @@ input[type=range] {
     background-color: black;
     color: #bbb;
     padding: 1px 5px;
-    width: 100%;
+    width: 100%; /* Match the width with the wrapper */
     text-align: left;
-    margin-bottom: -20px;
     box-sizing: border-box;
     cursor: grab;
     user-select: none;
 }
+
+.code-block {
+    padding: 15px;
+    margin-top: -5px;
+    margin-bottom: 0px;
+    box-sizing: border-box;
+    color: #D4D4D4;
+    overflow: hidden; /* Add horizontal scrollbar when content overflows */
+    white-space: pre; /* Prevents the text from wrapping */
+}
+
 
 .code-block pre code {
     border-radius: 0;
@@ -1143,6 +1149,15 @@ input[type=range] {
     cursor: grab;
     text-align: left;
 }
+
+    .user-prompt:hover {
+        transform: scale(1.05); /* increase size to 105% on hover */
+        transition: transform 0.3s ease; /* animate the size increase smoothly */
+    }
+
+    .user-prompt.editing {
+        transform: none; /* reset size */
+    }
 
 .response-wrapper {
     display: flex;
@@ -1191,11 +1206,6 @@ input[type=range] {
         background-color: #222226;
         border-radius: 50%;
         margin: 2px 0;
-    }
-
-    .user-prompt:hover {
-        transform: scale(1.05); /* increase size to 105% on hover */
-        transition: transform 0.3s ease; /* animate the size increase smoothly */
     }
 
 .code-block-wrapper.hovered {
