--- a/styles_v1.css
+++ b/styles_v1.css
@@ -14,12 +14,38 @@
     font-size: 16px;
 }
 
+
+.collapsed-circle {
+    display: inline-block;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    width: 40px;
+    height: 40px;
+    background-color: #222226;
+}
+
+    .collapsed-anchor:hover {
+        background-color: #555; /* Change to desired hover color */
+    }
+
+
+.collapsed-circle.collapsed-anchor {
+    background-color: rgb(125 116 139) !important;
+    border: none;
+}
+
+/* To hide the background color of the window when collapsed */
+.window.collapsed {
+    background-color: transparent;
+    border-color: transparent;
+}
+
 .window {
     display: flex;
     flex-direction: column;
     align-items: baseline;
     border: none;
-    background-color: rgba(60, 59, 66, 0.93);
+    background-color: rgb(50 51 62 / 80%);
     -webkit-box-shadow: 0px 0px 6.5px rgba(0, 0, 0, 0.3);
     -moz-box-shadow: 0px 0px 6.5px rgba(0, 0, 0, 0.3);
     box-shadow: 0px 0px 6.5px rgba(0, 0, 0, 0.3);
@@ -33,10 +59,10 @@
     transition: border 0.3s ease-in-out;
 }
 
-        .window-anchored {
-            background-color: rgba(0, 0, 0, 0.82);
-            /* Change this to the desired color */
-        }
+.window-anchored {
+    background-color: rgb(215 184 255 / 80%);
+    /* Change this to the desired color */
+}
 
             .window-anchored::before {
                 content: "";
@@ -51,39 +77,6 @@
                 z-index: 1;
             }
 
-@keyframes fadeInOut {
-    0% {
-        border-color: transparent;
-    }
-
-    100% {
-        border-color: #bbb;
-    }
-    /* Fast ease-in */
-    10% {
-        border-color: #bbb;
-    }
-    /* Slow ease-out */
-}
-
-.window::before {
-    content: "";
-    display: block;
-    position: absolute;
-    top: -2.5px;
-    left: -2.5px;
-    right: -2px;
-    bottom: -2px;
-    border: 2px solid rgba(187, 187, 187, 0); /* Transparent version of #bbb */
-    pointer-events: none;
-    z-index: -2;
-    transition: border-color 3s linear; /* Fast ease-in */
-}
-
-.window:hover::before {
-    border-color: rgba(187, 187, 187, 0.6); /* Opaque version of #bbb */
-    transition: border-color 0.2s ease-out; /* Slow ease-out */
-}
 
         .window.selected::before {
             content: "";
@@ -97,6 +90,8 @@
             pointer-events: none;
             z-index: 1;
         }
+
+
 
 .button-container {
     flex-grow: 0;
@@ -135,7 +130,7 @@
     border-width: 3px 3px 0px 0;
     border-color: #aaa;
     transform: translate(-2%, 10%);
-    z-index: 1;
+    z-index: 150;
 }
 
             .title-input:focus {
@@ -144,6 +139,17 @@
                 outline: none;
                 /* Remove the default outline */
             }
+
+.hide-except-title > *:not(.title-input) {
+    display: none;
+}
+
+.collapsed-title {
+    background: transparent;
+    border: none;
+    pointer-events: none; /* Makes it un-clickable */
+    text-align: center; /* Centers the text */
+}
 
 .header-container {
     display: flex;
@@ -322,7 +328,7 @@
             position: absolute;
             top: 100%; /* modify if needed */
             right: 0; /* modify if needed */
-            background: rgba(60, 59, 66, 0.9);
+            background: rgba(60, 59, 66, 0.7);
             border-top-right-radius: 8px;
             border-bottom-left-radius: 8px;
             overflow: hidden;
@@ -483,7 +489,7 @@
 
         #prompt-form button {
             z-index: 1;
-            padding: 4px 6px;
+            padding: 4px 4px;
             font-size: 14px;
             cursor: pointer;
             background-color: #222226;
@@ -878,19 +884,19 @@ input[type="checkbox"] {
 }
 
 /* Create a custom checkbox */
-input[type="checkbox"] + label:before {
-    content: '';
-    position: absolute;
-    left: 0;
-    top: 3px;
-    width: 14px;
-    height: 14px;
-    border: 1px solid rgb(60, 59, 66);
-    background-color: #222226;
-    display: inline-block;
-    border-radius: 25%;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.06);
-}
+    input[type="checkbox"] + label:before {
+        content: '';
+        position: absolute;
+        left: 0;
+        top: 3px;
+        width: 14px;
+        height: 14px;
+        border: 1px solid #353535;
+        background-color: #222226;
+        display: inline-block;
+        border-radius: 25%;
+        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.06);
+    }
 
 
 input[type="checkbox"]:checked + label:before {
@@ -1302,3 +1308,94 @@ input[type=range] {
         color: #222226;
     }
 
+/*Node Panel*/
+.node-panel {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: auto;
+    height: auto;
+    background: rgba(60, 59, 66, 0.7);
+    display: none; /* Initially hidden */
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 20px;
+    padding-bottom: 15px;
+    flex-direction: row; /* Ensure children are stacked vertically */
+    align-items: center; /* Center children horizontally */
+    border-bottom-right-radius: 8px;
+    margin-top: 0px; /* negative margin */
+    margin-left: 0px; /* negative margin */
+    z-index: 100;
+}
+
+    .node-panel.open {
+        display: flex;
+    }
+
+.icon-content {
+    flex-shrink: 0;
+    width: 49px;
+    height: 33px;
+    margin-inline: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 15%;
+}
+
+
+.panel-icon {
+    width: 100%;
+    height: 100%;
+    user-select: none;
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE/Edge */
+    background-color: #222226;
+    border-radius: 15%;
+    padding: 8px;
+    text-align: center;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -webkit-box-shadow: 0px 0px 30px 10px rgba(21, 21, 27, 0.1);
+    -moz-box-shadow: 0px 0px 30px 10px rgba(21, 21, 27, 0.1);
+    box-shadow: 0px 0px 30px 10px rgba(21, 21, 27, 0.1);
+    transition: background-color 0.3s, color 0.3s;
+}
+
+    .panel-icon:hover {
+        background-color: #ddd;
+        color: #222226;
+        cursor: grab;
+    }
+
+    /* Change cursor for draggable icons */
+    .panel-icon[data-draggable="true"]:hover {
+        cursor: grab;
+    }
+
+    .panel-icon[data-draggable="true"]:active {
+        cursor: grabbing;
+    }
+
+    /* Assuming you might have an active state for the icon in the future */
+    .panel-icon.activeIcon {
+        background-color: #929292;
+        cursor: grab;
+    }
+
+    .panel-icon.edges-active {
+        background-color: #929292;
+    }
+
+    .panel-icon.edges-icon:hover {
+        cursor: pointer; /* button click event cursor */
+    }
+
+.icon-content .panel-icon svg {
+    width: 100%;
+    height: 100%;
+    display: block;
+}
