Default to wikilinks,, Major improvements/fixes.
-Added default to wikilinks for zettelkasten
-Added edge addition and removal in the zettelkasten on ui interaction with the mind map.
-various additions, improvements, and fixes related to edge creation and deletion.
-Added custom bracket selection beyond wikilinks
-addition and removal of edges to zettelkasten through ui interaction.
-fixed connected code block rendering (initial block was not being captured)
-fixed pasting into title headers
-added scrolltotitle on input to title heading.
-improved duplicate title inputs.
fixed scroll to bottom on node textareas during zettelkasten input.
-Improved duplicate title handling.
-set maxheight for textareas when loading saved networks.
-added node specific recent context for wikipedia queries.
-fix textarea heights getting lost when off of screen.
-inverted scroll to zoom behavior
-significant refactor of processInput() into separate functions in a class.
-Fix for new line addition on every input to node textareas.
-Allow for reference tags to be included on any line of the node.
-capture undo and redo in node textareas and redirect to zettelkasten
-fix losing edge references in noteInput on interaction with node textarea.

--- a/styles_v1.css
+++ b/styles_v1.css
@@ -984,6 +984,13 @@ select-replacer > div:first-child {
 .inline-container {
     display: inline-block;
     vertical-align: middle;
+    margin-right: 3px;
+}
+
+.flex-container {
+    width: 90%;
+    display: flex;
+    align-items: center;
 }
 
 #LocalLLMselect {
@@ -1191,8 +1198,12 @@ input[type=range] {
     }
 
     /* Operators & Properties */
-    .cm-s-default .cm-operator, .cm-s-default .cm-property {
+    .cm-s-default .cm-operator {
         color: #67cdcc !important;
+    }
+
+    .cm-s-default .cm-property {
+        color: #ff5733 !important; /* You can set this to any color you'd like */
     }
 
     /* Numbers */
@@ -1270,25 +1281,6 @@ input[type=range] {
     background-color: #222226;
 }
 
-.loader {
-    border: 5px solid #222226; /* Dark grey */
-    border-top: 5px solid #006BB6; /* Blue */
-    border-radius: 50%;
-    width: 15px;
-    height: 15px;
-    animation: spin 2s linear infinite;
-}
-
-@keyframes spin {
-    0% {
-        transform: rotate(0deg);
-    }
-
-    100% {
-        transform: rotate(360deg);
-    }
-}
-
 .model-dropdown {
     width: 123px;
 }
@@ -1325,6 +1317,62 @@ input[type=range] {
 
 .error-x-mark-right {
     transform: translate(-50%, -50%) rotate(-45deg);
+}
+
+.loader {
+    border: 5px solid #222226; /* Dark grey */
+    border-top: 5px solid #006BB6; /* Blue */
+    border-radius: 50%;
+    width: 15px;
+    height: 15px;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes scaleDown {
+    0% {
+        transform: translate(-50%, -50%) scale(1);
+    }
+
+    100% {
+        transform: translate(-50%, -50%) scale(0);
+    }
+}
+
+.initial-animation {
+    animation: scaleDown 8s forwards;
+}
+
+.loader-fillBackground {
+    border: 5px solid #222226; /* Dark grey */
+    border-top: 5px solid #006BB6; /* Blue */
+    border-radius: 50%;
+    width: 15px;
+    height: 15px;
+    position: relative;
+    overflow: hidden;
+    animation: spin 2s linear infinite;
+}
+
+.loader-fill {
+    background-color: #006BB6; /* Blue */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    transition: transform 0.35s;
 }
 
 .status-icons-container {
