--- a/styles_v1.css
+++ b/styles_v1.css
@@ -699,7 +699,7 @@
     background-color: #222226;
     width: 261px;
     min-width: 261px;
-    height: 150px;
+    height: 70px;
     z-index: -1;
     border: inset;
     border-color: #8882;
@@ -980,11 +980,12 @@ select-replacer > div:first-child {
         }
 
         .scrollable-list {
-            height: 100px; /* Adjust this value based on how tall you want your list to be */
+            height: 149px; /* Adjust this value based on how tall you want your list to be */
             width: 250px;
             overflow-y: auto;
             border: 1px solid #000;
             padding: 5px;
+            margin-top: 10px;
         }
 
             .scrollable-list::-webkit-scrollbar {
